// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TicketMessageEmbeddedCard/> should render the comment card with different text positions 1`] = `
<div
  class="genericCard card"
>
  <div
    class="card-body"
  >
    <div
      class="row"
    >
      <div
        class="verticalCenter col-md-7"
      >
        <div
          class="mr-2"
        >
          <div
            class="component square"
            style="width: 36px; height: 36px;"
          >
            <div
              class="initials"
              style="width: 36px; height: 36px; font-size: 15px;"
            >
              <span
                style="line-height: 38px;"
              >
                s
              </span>
            </div>
          </div>
        </div>
        <div
          class="verticalCenter"
        >
          <div
            class="customerNameBody"
          >
            some_sender_firstname
             
            some_sender_lastname
          </div>
          <div>
            <span
              class="source"
            >
              <i
                class="icon d-inline-block icon-custom icon-facebook-feed uncolored"
              />
            </span>
          </div>
          <div>
            <div>
              MockedTicketMessageMeta
            </div>
          </div>
        </div>
      </div>
      <div
        class="text-right justify-content-center align-self-center dateTimeText col-md-5"
      >
        <div>
          MockedDatetimeLabel
        </div>
      </div>
    </div>
    <div
      class="mt-2 row"
    >
      <div
        class="col-md-12"
      >
        <span
          class="textBlock"
        >
          some comment
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`<TicketMessageEmbeddedCard/> should render the comment card with different text positions 2`] = `
<div
  class="genericCard card"
>
  <div
    class="card-body"
  >
    <div
      class="m-0 row"
    >
      <div
        class="avatarContainer col-md-1"
      >
        <div
          class="component square"
          style="width: 36px; height: 36px;"
        >
          <div
            class="initials"
            style="width: 36px; height: 36px; font-size: 15px;"
          >
            <span
              style="line-height: 38px;"
            >
              s
            </span>
          </div>
        </div>
      </div>
      <div
        class="col-md-11"
      >
        <div
          class="row"
        >
          <div
            class="col-md-7"
          >
            <div
              class="verticalCenter"
            >
              <div
                class="customerNameBody"
              >
                some_sender_firstname
                 
                some_sender_lastname
              </div>
              <div>
                <span
                  class="source"
                >
                  <i
                    class="icon d-inline-block icon-custom icon-facebook-feed uncolored"
                  />
                </span>
              </div>
              <div>
                <div>
                  MockedTicketMessageMeta
                </div>
              </div>
            </div>
          </div>
          <div
            class="text-right justify-content-center align-self-center dateTimeText pr-0 col-md-5"
          >
            <div>
              MockedDatetimeLabel
            </div>
          </div>
        </div>
        <div
          class="row"
        >
          <div
            class="pr-0 mt-2 col-md-12"
          >
            <span
              class="textBlock"
            >
              some comment
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
